--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,11 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.mysql-connector-java-5.1.14-bin.jar=lib\\mysql-connector-java-5.1.14-bin.jar
+file.reference.poi-3.10-FINAL-20140208.jar=lib\\poi-3.10-FINAL-20140208.jar
+file.reference.poi-excelant-3.10-FINAL-20140208.jar=lib\\poi-excelant-3.10-FINAL-20140208.jar
+file.reference.poi-ooxml-3.10-FINAL-20140208.jar=lib\\poi-ooxml-3.10-FINAL-20140208.jar
+file.reference.poi-ooxml-schemas-3.10-FINAL-20140208.jar=lib\\poi-ooxml-schemas-3.10-FINAL-20140208.jar
+file.reference.poi-scratchpad-3.10-FINAL-20140208.jar=lib\\poi-scratchpad-3.10-FINAL-20140208.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +52,12 @@ jar.compress=false
 javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.14-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.14-bin.jar}:\
+    ${file.reference.poi-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-excelant-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-ooxml-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-scratchpad-3.10-FINAL-20140208.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
